public struct Manifest {
    let entities: [Entity]
    public init(entities: [Entity]) {
        self.entities = entities
    }
}